--- a/news-story-template/primary-text-layout/index.css
+++ b/news-story-template/primary-text-layout/index.css
@@ -1,4 +1,4 @@
-[v-cloak] { display: none; } img {max-width: 100%;}
+[v-cloak] { display: none; }
 
 body{
     max-width: 360px;
@@ -62,6 +62,7 @@ figure{
     margin: 0%;
 }
 img{
+    max-width: 100%;
     border-top-left-radius:10px;
     border-top-right-radius:10px;
 }
