--- a/news-story-template/responsive-strategies/a.css
+++ b/news-story-template/responsive-strategies/a.css
@@ -14,6 +14,17 @@ body{
 ul{
     list-style:none;
     padding: 10px;
+    row-gap: 40px;
+    align-items:start;
+}
+li{
+    transition: transform .2s;
+}
+li:hover{
+    transform: scale(1.05);
+}
+article:hover{
+    box-shadow: 0px 0px 45px rgba(61, 84, 66, 0.80);
 }
 
 @media (min-width:0px){
