--- a/news-story-template/responsive-strategies/b.css
+++ b/news-story-template/responsive-strategies/b.css
@@ -16,31 +16,29 @@ ul{
     display:grid;
     padding: 10px;
     row-gap: 40px;
-    align-items:start;
 }
 li{
+    position:relative;
+    padding-left: 20px;
+    padding-right:20px;
+    padding-top:40px;
+    border-radius:10px;
+    box-shadow: 5px 5px 10px rgba(61, 84, 66, 0.5);
     transition: transform .2s;
     padding-bottom: 20px;
 }
 li:hover{
     transform: scale(1.05);
-}
-article{
-    padding-left: 20px;
-    padding-right:20px;
-    padding-top:40px;
-    padding-bottom:40px;
-    border-radius:10px;
-    box-shadow: 5px 5px 10px rgba(61, 84, 66, 0.5);
-    position:relative;
-}
-article:hover{
     box-shadow: 0px 0px 45px rgba(61, 84, 66, 0.80);
 }
 
 @media (min-width:0px){
     ul{
         column-gap:20px;
+    }
+    li{
+        position:relative;
+        padding-bottom:50px;
     }
     div.content_show{
         display:none;
@@ -60,7 +58,7 @@ article:hover{
         display:block;
     }
     figure{
-        max-width:45%;
+        max-width:1000px;
     }
 
 }
@@ -74,7 +72,7 @@ article:hover{
         display:block;
     }
     figure{
-        max-width:50%;
+        max-width:1000px;
     }
 }
 
@@ -108,7 +106,6 @@ p.content{
 figure{
     display:flex;
     flex-flow:column;
-    max-width:100%;
     margin: 0%;
 }
 img{
