--- a/news-story-template/featured-story-teaser/teaserA.css
+++ b/news-story-template/featured-story-teaser/teaserA.css
@@ -5,27 +5,49 @@ body{
     
 }
 
-.featured_story{
-    display:none;
+.img_container{
+    margin:15px;
+    padding-top:20px;
+    position:relative;
+    text-align:center;
 }
+
+.bottom-right{
+    position:absolute;
+    bottom:0px;
+    right:0px;
+    background-color:rgba(245, 245, 220, 0.75);
+    border-top-left-radius: 5px;
+
+}
+
 .other_list{
     font-size: 16px;
 }
+
+h1{
+    font-family:'Times New Roman', Times, serif;
+    color:darkolivegreen;
+    font-size:30px;
+    margin:20px;
+}
+
 ul{
     list-style:none;
     display:grid;
     padding: 10px;
     row-gap: 40px;
 }
+
 li{
     position:relative;
     padding-left: 20px;
     padding-right:20px;
     padding-top:40px;
+    padding-bottom:40px;
     border-radius:10px;
     box-shadow: 5px 5px 10px rgba(61, 84, 66, 0.5);
     transition: transform .2s;
-    padding-bottom: 20px;
 }
 li:hover{
     transform: scale(1.05);
@@ -36,10 +58,6 @@ li:hover{
     ul{
         column-gap:20px;
     }
-    li{
-        position:relative;
-        padding-bottom:50px;
-    }
     div.content_show{
         display:none;
     }
@@ -47,33 +65,33 @@ li:hover{
 
 @media (min-width: 800px){
     ul{
-        grid-template-columns: 1fr;
-        column-gap:30px;
-    }
-    div.img_content{
-        display:flex;
+        grid-template-columns: 1fr 1fr;
         column-gap: 30px;
     }
     div.content_show{
         display:block;
     }
-    figure{
-        max-width:1000px;
-    }
-
 }
 
 @media (min-width: 1350px){
     ul{
-        grid-template-columns: 1fr 1fr;
-        column-gap:30px;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 30px;
     }
     div.content_show{
         display:block;
     }
-    figure{
-        max-width:1000px;
-    }
+}
+a.featured_title{
+    text-decoration:none;
+    font-size: 45px;
+    text-align:center;
+    font-family:'Times New Roman', Times, serif;
+    font-weight:bold;
+    color:darkolivegreen;
+}
+a.featured_title:hover{
+    text-decoration:underline;
 }
 
 a.title{
@@ -95,6 +113,11 @@ a.source{
     color:darkolivegreen;
 }
 
+.story_source{
+    padding:2px;
+    color:darkolivegreen;
+}
+
 p{
     font-style:italic;
 }
@@ -102,6 +125,14 @@ p.content{
     font-style:normal;
     margin-bottom:0px;
 }
+p.featured_description{
+    font-size:25px;
+}
+p.featured_content{
+    font-size:18px;
+    font-style:normal;
+}
+
 
 figure{
     display:flex;
