--- a/news-story-template/responsive-masthead/Index.css
+++ b/news-story-template/responsive-masthead/Index.css
@@ -2,6 +2,26 @@
 
 body{
 }
+#hashLink{
+    display: none;
+}
+#hashLink:target{
+    display: block;
+}
+.menu{
+    margin:10px;
+    padding:20px;
+    width:calc(100% - 75px);
+    background-color:rgb(172,70,28);
+    color:rgb(254, 249, 220);
+    text-align:center;
+    position:absolute;
+    border-radius:15px;
+    z-index:1;
+}
+.menu_option{
+    padding-top:60px;
+}
 .spacing{
     margin:50px;
     text-align:center;
@@ -18,6 +38,13 @@ body{
     position:absolute;
     top: -30px;
     left: -20px;
+}
+
+.reverse_logo{
+    position:absolute;
+    top: -30px;
+    left: -20px;
+    z-index:1;
 }
 .featured_date{
     width:130px;
@@ -59,6 +86,11 @@ img{
 img.logo_img{
     width:200px;
     height:200px;
+}
+img.reverse_logo_img{
+    width:150px;
+    height:150px;
+    display:block;
 }
 
 .other_list{
