--- a/news-story-template/responsive-masthead/Index.css
+++ b/news-story-template/responsive-masthead/Index.css
@@ -2,6 +2,7 @@
 
 body{
 }
+
 #hashLink{
     display: none;
 }
@@ -32,7 +33,7 @@ body{
     width:100%;
     position:relative;
     display:inline-block;
-    background:linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(8, 16, 5, 1) 100%);
+    background:linear-gradient(to bottom, rgba(0,0,0,0) 25%, rgba(8,16,5,.8) 50%, rgba(8, 16, 5, 1) 100%);
 }
 .logo{
     position:absolute;
@@ -46,26 +47,14 @@ body{
     left: -20px;
     z-index:1;
 }
-.featured_date{
-    width:130px;
-    height:60px;
-    margin:10px;
-    text-align:center;
-    position:absolute;
-    top:10px;
-    right: 10px;
-    color:rgb(191,189,167);
-    font-size: 20px;
-    background-color:rgba(38, 51, 42, 0.7);
-    border-radius:10px;
-}
 
 .text{
-    margin:20px;
+    margin:40px;
     position:absolute;
     bottom:10px;
     color:rgb(191,189,167);
 }
+
 .story_source{
     position:absolute;
     right: 16px;
@@ -203,6 +192,15 @@ img.small_img{
     div.content_show{
         display:none;
     }
+    img{
+        height:auto;
+    }
+    .img_container{
+        position:relative;
+        background:rgb(172,70,28);
+        border-radius:15px;
+        z-index: -1;
+    }
     img.logo_img{
         width:150px;
         height:150px;
@@ -215,25 +213,22 @@ img.small_img{
     a.featured_title{
         font-size:30px;
     }
+    a.source{
+        color:rgb(191,189,167);
+        text-decoration:none;
+    }
+    a.source:hover{
+        text-decoration:underline;
+    }
     p.featured_description{
         font-size:18px;
     }
     p.featured_content{
         font-size:14px;
     }
-.text{
-    margin:20px;
-    padding-top:10px;
-    padding-bottom:10px;
-    position:relative;
-    color:rgb(191,189,167);
-}
-.featured_date{
-    width:80px;
-    height:40px;
-    margin:10px;
-    font-size: 13px;
-}
+    .featured_story{
+        height:700px;
+    }
 }
 
 @media (min-width: 800px){
@@ -249,6 +244,20 @@ img.small_img{
         top: -30px;
         left: -20px;
     }
+    img{
+        display: block;
+        position:relative;
+        z-index: -1;
+        width:100%;
+        height:100%;
+        border-top-left-radius:15px;
+        border-top-right-radius:15px;
+    }
+    .img_container{
+        position:relative;
+        display:inline-block;
+        background:linear-gradient(to bottom, rgba(0,0,0,0) 25%, rgba(8,16,5,.8) 50%, rgba(8, 16, 5, 1) 100%);
+    }
     img.logo_img{
         width:200px;
         height:200px;
@@ -262,17 +271,8 @@ img.small_img{
     p.featured_content{
         font-size:14px;
     }
-    .text{
-        margin:20px;
-        position:absolute;
-        bottom:10px;
-        color:rgb(191,189,167);
-    }
-    .featured_date{
-        width:100px;
-        height:50px;
-        margin:10px;
-        font-size: 16px;
+    .featured_story{
+        height:auto;
     }
 }
 
@@ -284,15 +284,6 @@ img.small_img{
     div.content_show{
         display:block;
     }
-    img.logo_img{
-        width:300px;
-        height:300px;
-    }
-    .logo{
-        position:absolute;
-        top: -50px;
-        left: -30px;
-    }
     a.featured_title{
         font-size:45px;
     }
@@ -302,16 +293,27 @@ img.small_img{
     p.featured_content{
         font-size:18px;
     }
-    .text{
-        margin:20px;
-        position:absolute;
-        bottom:10px;
-        color:rgb(191,189,167);
+    .featured_story{
+        height:auto;
+        display:flex;
+        align-items:center;
+        justify-content:center;
     }
-    .featured_date{
-        width:130px;
-        height:60px;
+    img{
+        display: block;
+        position:relative;
+        z-index: -1;
+        width:1350px;
+        border-top-left-radius:15px;
+        border-top-right-radius:15px;
+    }
+    .img_container{
+        align-self:center;
         margin:10px;
-        font-size: 20px;
+        margin-top:40px;
+        width:1350px;
+        position:relative;
+        display:inline-block;
+        background:linear-gradient(to bottom, rgba(0,0,0,0) 25%, rgba(8,16,5,.8) 60%, rgba(8, 16, 5, 1) 100%);
     }
 }
