--- a/news-story-template/finished template/index.css
+++ b/news-story-template/finished template/index.css
@@ -34,7 +34,6 @@ body{
     position:relative;
     display:inline-block;
     background:linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.02) 20%,rgba(0,0,0,0) 25%,rgba(0,0,0,0) 25%,rgba(0,0,0,0.77) 78%,rgba(0,0,0,0.8) 79%,rgba(0,0,0,0.8) 99%,rgba(0,0,0,0.8) 100%);
-
 }
 .logo{
     position:absolute;
@@ -237,6 +236,11 @@ a.footer_link:hover{
         width:150px;
         height:150px;
     }
+    .img_container{
+        border-top-left-radius: 15px;
+        border-top-right-radius:15px;
+        background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 32%);
+    }
     .logo{
         position:absolute;
         top: -20px;
@@ -247,22 +251,30 @@ a.footer_link:hover{
     }
     a.featured_title{
         font-size:30px;
+        color:rgb(38,51,42);
     }
     a.source{
-        color:rgb(191,189,167);
+        color:rgb(172,70,28);
         text-decoration:none;
     }
     a.source:hover{
         text-decoration:underline;
     }
     p.featured_description{
+        color:rgb(38,51,42);
         font-size:18px;
     }
     p.featured_content{
+        color:rgb(38,51,42);
         font-size:14px;
     }
+    p.featured_date{
+        color:rgb(172,70,28);
+    }
     .featured_story{
-        height:700px;
+        height:740px;
+        border-radius:15px;
+        box-shadow: 5px 5px 10px rgba(61, 84, 66, 0.5);
     }
 }
 
