--- a/news-story-template/finished template/index.css
+++ b/news-story-template/finished template/index.css
@@ -3,26 +3,46 @@
 body{
 }
 
-#hashLink{
-    display: none;
+.fold_menu{
+    position:absolute;
+    width:100%;
+    height:auto;
+    z-index:3;
 }
-#hashLink:target{
+.fold_menu #myLinks{
+    position:absolute;
+    top:28px;
+    background-color: rgb(254, 249, 220);
+    border-radius:15px;
+    width:100%;
+    height:100px;
+    text-align:right;
+    display:none;
+}
+.fold_menu a{
+    font-size:18px;
+    text-decoration:none;
+    color:rgb(172,70,28);
+
     display: block;
 }
-.fold_menu{
-    margin:10px;
-    padding:20px;
-    width:calc(100% - 75px);
-    background-color:rgb(172,70,28);
-    color:rgb(254, 249, 220);
-    text-align:center;
-    position:absolute;
-    border-radius:15px;
-    z-index:1;
+.fold_menu a.ind_link{
+    position:relative;
+    padding:10px;
+    margin-top:30px;
+    display:inline-block;
 }
-.fold_menu_option{
-    padding-top:60px;
+.fold_menu a:hover{
+    text-decoration:underline;
 }
+.fold_menu img.logo_img{
+    transition: transform .2s;
+}
+.fold_menu img.logo_img:hover{
+    transform: scale(1.10);
+}
+
+
 .spacing{
     margin:50px;
     text-align:center;
@@ -34,11 +54,6 @@ body{
     position:relative;
     display:inline-block;
     background:linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.02) 20%,rgba(0,0,0,0) 25%,rgba(0,0,0,0) 25%,rgba(0,0,0,0.77) 78%,rgba(0,0,0,0.8) 79%,rgba(0,0,0,0.8) 99%,rgba(0,0,0,0.8) 100%);
-}
-.logo{
-    position:absolute;
-    top: -30px;
-    left: -20px;
 }
 .menu{
     position:absolute;
@@ -239,7 +254,7 @@ a.footer_link:hover{
     img.featured_img{
         z-index:1;
     }
-    .logo{
+    .fold_menu{
         position:absolute;
         top: -20px;
         left: -10px;
@@ -293,7 +308,7 @@ a.footer_link:hover{
     div.content_show{
         display:block;
     }
-    .logo{
+    .fold_menu{
         position:absolute;
         top: -20px;
         left: -15px;
