--- a/game-ui/final/index.css
+++ b/game-ui/final/index.css
@@ -22,8 +22,8 @@ body{
     width:16em;
 }
 .c_character:hover{
-    transition-duration: 1s;
-    transform:scale(1.1);
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 3%, rgba(121,9,22,1) 18%, rgba(0,212,255,0) 75%);
 }
 .c_item{
     position:absolute;
@@ -32,8 +32,8 @@ body{
     width:13em;
 }
 .c_item:hover{
-    transition-duration: 1s;
-    transform:scale(1.2);
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 3%, rgba(121,9,22,1) 18%, rgba(0,212,255,0) 60%);
 }
 .dialog{
     position:absolute;
@@ -275,7 +275,7 @@ body{
     visibility: hidden;
 }
 .stored_item:hover{
-    transform:scale(1.1);
+    transform:scale(1.2);
     transition-duration: 1s;
 }
 
